--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             setIsRecording(true);
             return () => {
               recognition.abort();
+              recognition = null;
             };
           }, []);
 
