--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           const [isRecording, setIsRecording] = React.useState(false);
           const [text, setText] = React.useState([]);
           const [entries, setEntries] = React.useState([]);
+          const [lastResult, setLastResult] = React.useState(null);
           const entriesRef = React.useRef(null);
           entriesRef.current = entries;
           const gistId = "d2e4bc616cbc85ebfe4999fe2a19212e";
@@ -48,7 +49,10 @@
               Array.from(event.results).forEach((result) => {
                 if (result.isFinal) {
                   const transcript = result[0].transcript;
-                  setText((text) => [...text, transcript]);
+                  if (transcript !== lastResult) {
+                    setText((text) => [...text, transcript]);
+                  }
+                  setLastResult(transcript);
                 }
               });
             };
