--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           const [isRecording, setIsRecording] = React.useState(false);
           const [text, setText] = React.useState([]);
           const [entries, setEntries] = React.useState([]);
-          const [lastResult, setLastResult] = React.useState(null);
+          const lastResultRef = React.useRef("");
           const entriesRef = React.useRef(null);
           entriesRef.current = entries;
           const gistId = "d2e4bc616cbc85ebfe4999fe2a19212e";
@@ -43,16 +43,16 @@
           React.useEffect(() => {
             const SpeechRecognition =
               window.SpeechRecognition || window.webkitSpeechRecognition;
-            const recognition = new SpeechRecognition();
+            let recognition = new SpeechRecognition();
             recognition.continuous = true;
             recognition.onresult = (event) => {
               Array.from(event.results).forEach((result) => {
                 if (result.isFinal) {
                   const transcript = result[0].transcript;
-                  if (transcript !== lastResult) {
+                  if (transcript !== lastResultRef.current) {
                     setText((text) => [...text, transcript]);
                   }
-                  setLastResult(transcript);
+                  lastResultRef.current = transcript;
                 }
               });
             };
