--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           const [isRecording, setIsRecording] = React.useState(false);
           const [text, setText] = React.useState([]);
           const [entries, setEntries] = React.useState([]);
-          const lastResultRef = React.useRef("");
+          const lastResultsRef = React.useRef(new Array(3));
           const entriesRef = React.useRef(null);
           entriesRef.current = entries;
           const gistId = "d2e4bc616cbc85ebfe4999fe2a19212e";
@@ -48,11 +48,12 @@
             recognition.onresult = (event) => {
               Array.from(event.results).forEach((result) => {
                 if (result.isFinal) {
-                  const transcript = result[0].transcript;
-                  if (transcript !== lastResultRef.current) {
+                  const transcript = result[0].transcript.trim();
+                  if (!lastResultsRef.current.includes(transcript)) {
                     setText((text) => [...text, transcript]);
                   }
-                  lastResultRef.current = transcript;
+                  lastResultsRef.current.push(transcript);
+                  lastResultsRef.current.shift();
                 }
               });
             };
