--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                 });
               } else {
                 setEntries([]);
+                setText([]);
               }
             };
             const intervalID = setInterval(polling, 20000);
