--- a/index.html
+++ b/index.html
@@ -206,17 +206,23 @@
 
           return html`
             <section class="container mx-auto">
-              <p class="flex justify-end mr-6 mt-3">
-                ${
-                  isRecording &&
-                  html`<div
-                    class="w-5 h-5 bg-red-500 rounded-full animate-pulse mr-2 mt-0.5"
-                  ></div>`
-                }
-                <div>
-                  Recording: ${isRecording ? "true" : "false"}
-                </div>
-              </p>
+              <div class="flex justify-between mt-6 mb-4">
+                <p class="ml-3">
+                  <a href="/history.html" class="bg-gray-100 p-4 rounded-xl border">History</a>
+                </p>
+                <h1 class="text-bold text-2xl">Chatlog</h1>
+                <p class="mr-6 flex">
+                  ${
+                    isRecording &&
+                    html`<div
+                      class="w-5 h-5 bg-red-500 rounded-full animate-pulse mr-2 mt-0.5"
+                    ></div>`
+                  }
+                  <div>
+                    Recording: ${isRecording ? "true" : "false"}
+                  </div>
+                </p>
+              </div>
               <ul>
                 ${entries
                   .sort((a, b) => parseInt(b.timestamp) - parseInt(a.timestamp))
@@ -224,16 +230,16 @@
                     (entry, key) => html`
                       <li key=${key}>
                         <div
-                          className="grid grid-cols-12 m-3 p-3 border-2 rounded-md bg-amber-100"
+                          class="grid grid-cols-12 m-3 p-3 border-2 rounded-md bg-amber-100"
                         >
-                          <p className="col-span-9 lg:col-span-11 px-6">
+                          <p class="col-span-9 lg:col-span-11 px-6">
                             ${entry.content}
                           </p>
-                          <div className="col-span-3 lg:col-span-1">
+                          <div class="col-span-3 lg:col-span-1">
                             <button
                               onClick=${removeRecord}
                               data-timestamp=${entry.timestamp}
-                              className="p-3 bg-orange-600 text-white"
+                              class="p-3 bg-orange-600 text-white"
                             >
                               Remove
                             </button>
