--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <section class="container mx-auto">
               <div class="flex justify-between mt-6 mb-4">
                 <p class="ml-3">
-                  <a href="/history.html" class="bg-gray-100 p-4 rounded-xl border">History</a>
+                  <a href="/chatlog/history.html" class="bg-gray-100 p-4 rounded-xl border">History</a>
                 </p>
                 <h1 class="text-bold text-2xl">Chatlog</h1>
                 <p class="mr-6 flex">
