--- a/history.html
+++ b/history.html
@@ -156,7 +156,7 @@
                     `
                   )}
               </div>
-              <ul>
+              <ul class="-mt-3">
                 ${selectedFileEntries
                   .sort((a, b) => parseInt(b.timestamp) - parseInt(a.timestamp))
                   .map(
