--- a/history.html
+++ b/history.html
@@ -132,7 +132,7 @@
 
           return html`
             <section class="container mx-auto">
-              <div class="flex overflow-x-scroll sticky top-0 bg-white">
+              <div class="mx-3 flex overflow-x-scroll sticky top-0 bg-white">
                 ${entries
                   .sort((a, b) => b.date - a.date)
                   .map(
