--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                     Recording: ${isRecording ? "true" : "false"}
                   </div>
                   <div>
-                    <button onClick=${stopRecordingButton}>Stop Recording</button>
+                    <button onClick=${stopRecordingButton} class="p-3 bg-gray-50">Stop Recording</button>
                   </div>
                 </p>
               </div>
