--- a/index.html
+++ b/index.html
@@ -266,7 +266,9 @@
                     ></div>`
                   }
                   <div>
-                    Recording: ${isRecording ? "true" : "false"}
+                    <p class="p-3">
+                      Recording: ${isRecording ? "true" : "false"}
+                    </p>
                   </div>
                   <div>
                     <button onClick=${stopRecordingButton} class="p-3 bg-gray-50">Stop Recording</button>
