--- a/index.html
+++ b/index.html
@@ -261,9 +261,9 @@
             setStopRecording(!stopRecording);
           };
 
-          return html`
-            ${isDisplayed && html`
-              <section class="container mx-auto">
+          if (isDisplayed)
+            return html`
+            <section class="container mx-auto">
               <div class="flex justify-between mt-6 mb-4">
                 <h1 class="text-bold text-2xl">Chatlog</h1>
                 <p class="mr-6 flex">
@@ -326,7 +326,6 @@
                 </div>
               </div>
             </section>
-            `}
           `;
         };
         ReactDOM.render(
