--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                 <p class="ml-3">
                   <a href="/chatlog/history.html" class="bg-gray-100 p-4 rounded-xl border">History</a>
                 </p>
-                <h1 class="text-bold text-2xl">Chatlog</h1>
+                <h1 class="text-bold text-2xl"></h1>
                 <p class="mr-6 flex">
                   ${
                     isRecording &&
@@ -282,7 +282,7 @@
                     </p>
                   </div>
                   <div>
-                    <button onClick=${stopRecordingButton} class="p-3 bg-gray-50">Stop Recording</button>
+                    <button onClick=${stopRecordingButton} class="p-3 bg-gray-50">Toggle Recording</button>
                   </div>
                 </p>
               </div>
