--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                   }
                   <div>
                     <p class="p-3">
-                      Recording: ${isRecording ? "true" : "false"}
+                      ${isRecording ? "Recording" : ""}
                     </p>
                   </div>
                   <div>
