--- a/history.html
+++ b/history.html
@@ -10,7 +10,7 @@
       import React from "./assets/react.js";
       import ReactDOM from "./assets/react-dom.js";
       import htm from "./assets/htm.js";
-      import { Octokit } from "https://esm.sh/octokit";
+      import { Octokit } from "./assets/octokit.mjs";
       (() => {
         const Index = () => {
           const html = htm.bind(React.createElement);
