--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
             return html`
             <section class="container mx-auto">
               <div class="flex justify-between mt-6 mb-6">
-                <p class="ml-3">
-                  <a href="/chatlog/history.html" class="bg-gray-100 p-4 rounded-xl border">History</a>
+                <p class="ml-3 pt-2.5">
+                  <a href="/chatlog/history.html" class="bg-gray-100 p-3 border rounded-xl">History</a>
                 </p>
                 <h1 class="text-bold text-2xl"></h1>
                 <p class="mr-6 flex">
@@ -288,7 +288,7 @@
                       html`
                         <button
                           onClick=${stopRecordingButton}
-                          class="p-3 bg-gray-50"
+                          class="p-3 bg-gray-100 border rounded-xl"
                         >
                           Toggle Recording
                         </button>
