--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           const [octokit, setOctokit] = React.useState(null);
           const [isRecording, setIsRecording] = React.useState(false);
           const [isAuthenticated, setIsAuthenticated] = React.useState(false);
+          const [ctaDisabled, setCtaDisabled] = React.useState(false);
           const [authenticationStep, setAuthenticationStep] =
             React.useState(false);
           const [stopRecording, setStopRecording] = React.useState(false);
@@ -267,14 +268,41 @@
             setStopRecording(!stopRecording);
           };
 
+          const toggleClickability = () => {
+            setCtaDisabled(!ctaDisabled);
+          };
+
+          const goToHistory = () => {
+            window.location.href = "/chatlog/history.html";
+          };
+
           if (isAuthenticated) {
             return html`
             <section class="container mx-auto">
               <div class="flex justify-between mt-6 mb-6">
                 <p class="ml-3 pt-2.5">
-                  <a href="/chatlog/history.html" class="bg-gray-100 p-3 border rounded-xl">History</a>
+                  <button
+                    onClick=${goToHistory}
+                    disabled=${ctaDisabled}
+                    class="p-3 bg-gray-100 border rounded-xl"
+                  >
+                    History
+                  </button>
                 </p>
-                <h1 class="text-bold text-2xl"></h1>
+                <div>
+                  ${
+                    !ctaDisabled &&
+                    html`
+                      <button
+                        onClick=${toggleClickability}
+                        disabled=${ctaDisabled}
+                        class="p-3 bg-gray-100 border rounded-xl"
+                      >
+                        Toggle Clickability
+                      </button>
+                    `
+                  }
+                </div>
                 <p class="mr-6 flex">
                   ${
                     isRecording &&
@@ -288,6 +316,7 @@
                       html`
                         <button
                           onClick=${stopRecordingButton}
+                          disabled=${ctaDisabled}
                           class="p-3 bg-gray-100 border rounded-xl"
                         >
                           Toggle Recording
@@ -312,6 +341,7 @@
                           <div class="col-span-3 lg:col-span-1">
                             <button
                               onClick=${removeRecord}
+                              disabled=${ctaDisabled}
                               data-timestamp=${entry.timestamp}
                               class="p-3 bg-orange-600 text-white"
                             >
@@ -336,7 +366,7 @@
               <div class="fixed bottom-0 left-0 w-full bg-white border-t border-gray-200 p-4">
                 <div class="flex items-center">
                   <input type="text" value=${formValue} onChange=${formValueChanged} class="flex-grow p-2 border border-gray-300 rounded-l-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500" />
-                  <button onClick=${submitForm} class="p-2 bg-blue-500 text-white rounded-r-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50">Submit</button>
+                  <button onClick=${submitForm} disabled=${ctaDisabled} class="p-2 bg-blue-500 text-white rounded-r-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50">Submit</button>
                 </div>
               </div>
             </section>
